add api of images_names_list
